--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>me.zombie_striker</groupId>
     <artifactId>QualityArmory</artifactId>
-    <version>2.0.14-SNAPSHOT</version>
+    <version>2.0.14</version>
     <name>QualityArmory</name>
 
     <properties>
