--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>me.zombie_striker</groupId>
     <artifactId>QualityArmory</artifactId>
-    <version>2.0.14.2</version>
+    <version>2.0.15-SNAPSHOT</version>
     <name>QualityArmory</name>
 
     <properties>
@@ -50,7 +50,6 @@
         <repository>
             <id>codemc-repo</id>
             <url>https://repo.codemc.io/repository/maven-public/</url>
-            <layout>default</layout>
         </repository>
 
         <repository>
@@ -111,7 +110,7 @@
         <dependency>
             <groupId>com.github.cryptomorin</groupId>
             <artifactId>XSeries</artifactId>
-            <version>11.2.0.1</version>
+            <version>11.2.1</version>
         </dependency>
 
         <!-- Vault API -->
@@ -346,7 +345,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
-                <version>3.6.0</version>
+                <version>3.3.0</version>
                 <configuration>
                     <relocations>
                         <relocation>
