--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>me.zombie_striker</groupId>
     <artifactId>QualityArmory</artifactId>
-    <version>2.0.15</version>
+    <version>2.0.16-SNAPSHOT</version>
     <name>QualityArmory</name>
 
     <properties>
@@ -76,7 +76,7 @@
         <dependency>
             <groupId>com.github.cryptomorin</groupId>
             <artifactId>XSeries</artifactId>
-            <version>11.2.1</version>
+            <version>11.3.0</version>
         </dependency>
 
         <dependency>
