--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -3,7 +3,7 @@
 # certain platforms or Java versions, and provides a first line of defence
 # against bad commits.
 
-name: AQQBot Gradle Build
+name: QualityArmory Build
 on: push
 
 jobs:
@@ -14,19 +14,15 @@ jobs:
     steps:
       - name: Checkout Git Repository
         uses: actions/checkout@v3
-      - name: Validate Gradle wrapper
-        uses: gradle/wrapper-validation-action@v1
-      - name: Setup Gradle
-        uses: gradle/gradle-build-action@v2
       - name: Set up JDK
         uses: actions/setup-java@v3
         with:
           distribution: 'temurin'
           java-version: '21'
-      - name: make gradle wrapper executable
-        run: chmod +x ./gradlew
+      - name: make maven wrapper executable
+        run: chmod +x ./mvnw
       - name: Build
-        run: ./gradlew build
+        run: ./mvnw package
       - name: capture build artifacts
         uses: actions/upload-artifact@v3
         with:
