--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>me.zombie_striker</groupId>
     <artifactId>QualityArmory</artifactId>
-    <version>2.0.17</version>
+    <version>2.0.18-SNAPSHOT</version>
     <name>QualityArmory</name>
 
     <properties>
@@ -69,6 +69,10 @@
             <url>https://maven.playpro.com/</url>
         </repository>
 
+        <repository>
+            <id>glaremasters repo</id>
+            <url>https://repo.glaremasters.me/repository/towny/</url>
+        </repository>
     </repositories>
 
     <dependencies>
@@ -76,7 +80,7 @@
         <dependency>
             <groupId>com.github.cryptomorin</groupId>
             <artifactId>XSeries</artifactId>
-            <version>12.1.0</version>
+            <version>13.0.0</version>
         </dependency>
 
         <dependency>
@@ -135,9 +139,9 @@
 
         <!-- Towny -->
         <dependency>
-            <groupId>com.github.TownyAdvanced</groupId>
-            <artifactId>Towny</artifactId>
-            <version>0.100.3.0</version>
+            <groupId>com.palmergames.bukkit.towny</groupId>
+            <artifactId>towny</artifactId>
+            <version>0.101.1.0</version>
             <scope>provided</scope>
         </dependency>
 
