Added KingdomsX support Closes #367

--- a/pom.xml
+++ b/pom.xml
@@ -274,6 +274,13 @@
             <scope>provided</scope>
         </dependency>
 
+        <dependency>
+            <groupId>com.github.cryptomorin</groupId>
+            <artifactId>kingdoms</artifactId>
+            <version>1.17.10-BETA</version>
+            <scope>provided</scope>
+        </dependency>
+
     </dependencies>
 
     <build>
