--- a/pom.xml
+++ b/pom.xml
@@ -80,13 +80,13 @@
         <dependency>
             <groupId>com.github.cryptomorin</groupId>
             <artifactId>XSeries</artifactId>
-            <version>13.2.0</version>
+            <version>13.3.1</version>
         </dependency>
 
         <dependency>
             <groupId>de.tr7zw</groupId>
             <artifactId>item-nbt-api</artifactId>
-            <version>2.15.0</version>
+            <version>2.15.1-SNAPSHOT</version>
         </dependency>
 
         <!-- WorldGuard Wrapper -->
