Fixed entity damage

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -72,7 +72,7 @@ verboseItemLogging: false
 enableIgnoreArmorProtection: false
 enableReloadingWhenSwapToOffhand: true
 enableReloadOnlyWhenSwapToOffhand: false
-allowGunHitEntities: false
+allowGunHitEntities: true
 showOutOfAmmoOnTitle: false
 showReloadingTitle: false
 enableExplosionDamage: false
