--- a/pom.xml
+++ b/pom.xml
@@ -86,7 +86,7 @@
         <dependency>
             <groupId>de.tr7zw</groupId>
             <artifactId>item-nbt-api</artifactId>
-            <version>2.15.1</version>
+            <version>2.15.2-SNAPSHOT</version>
         </dependency>
 
         <!-- WorldGuard Wrapper -->
