--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>me.zombie_striker</groupId>
     <artifactId>QualityArmory</artifactId>
-    <version>2.0.21</version>
+    <version>2.0.22-SNAPSHOT</version>
     <name>QualityArmory</name>
 
     <properties>
@@ -31,11 +31,6 @@
         <repository>
             <id>viaversion-repo</id>
             <url>https://repo.viaversion.com</url>
-        </repository>
-
-        <repository>
-            <id>dmulloy2-repo</id>
-            <url>https://repo.dmulloy2.net/nexus/repository/public/</url>
         </repository>
 
         <repository>
@@ -86,7 +81,7 @@
         <dependency>
             <groupId>de.tr7zw</groupId>
             <artifactId>item-nbt-api</artifactId>
-            <version>2.15.1</version>
+            <version>2.15.2-SNAPSHOT</version>
         </dependency>
 
         <!-- WorldGuard Wrapper -->
@@ -163,9 +158,9 @@
 
         <!-- ProtocolLib -->
         <dependency>
-            <groupId>com.comphenix.protocol</groupId>
+            <groupId>net.dmulloy2</groupId>
             <artifactId>ProtocolLib</artifactId>
-            <version>5.1.0</version>
+            <version>5.4.0</version>
             <scope>provided</scope>
         </dependency>
 
