--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>me.zombie_striker</groupId>
     <artifactId>QualityArmory</artifactId>
-    <version>2.0.24-SNAPSHOT</version>
+    <version>2.1.0-SNAPSHOT</version>
     <name>QualityArmory</name>
 
     <properties>
@@ -24,7 +24,7 @@
         </repository>
 
         <repository>
-            <id>chestshop-repo</id>
+            <id>minebench-repo</id>
             <url>https://repo.minebench.de/</url>
         </repository>
 
@@ -276,6 +276,12 @@
             <scope>provided</scope>
         </dependency>
 
+        <dependency>
+            <groupId>de.themoep</groupId>
+            <artifactId>inventorygui</artifactId>
+            <version>1.6.5</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
@@ -290,6 +296,7 @@
                     <include>changelog.txt</include>
                     <include>plugin.yml</include>
                     <include>config.yml</include>
+                    <include>menu.yml</include>
                     <include>META-INF/.mojang-mapped</include>
                 </includes>
             </resource>
@@ -316,7 +323,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.11.0</version>
+                <version>3.14.1</version>
                 <configuration>
                     <source>1.8</source>
                     <target>1.8</target>
@@ -325,11 +332,11 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
-                <version>3.2.2</version>
+                <version>3.5.0</version>
             </plugin>
             <plugin>
                 <artifactId>maven-deploy-plugin</artifactId>
-                <version>3.1.1</version>
+                <version>3.1.4</version>
                 <configuration>
                     <!--altDeploymentRepository>internal.repo::default::file://${project.build.directory}/mvn-repo</altDeploymentRepository-->
                 </configuration>
@@ -337,7 +344,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
-                <version>3.3.0</version>
+                <version>3.6.1</version>
                 <configuration>
                     <relocations>
                         <relocation>
@@ -351,6 +358,10 @@
                         <relocation>
                             <pattern>de.tr7zw.changeme.nbtapi</pattern>
                             <shadedPattern>me.zombie_striker.qg.nbt</shadedPattern>
+                        </relocation>
+                        <relocation>
+                            <pattern>de.themoep.inventorygui</pattern>
+                            <shadedPattern>me.zombie_striker.qg.libs.inventorygui</shadedPattern>
                         </relocation>
                     </relocations>
                 </configuration>
